# controllers/b_barber/cont_barber.go
@@ -44,7 +44,7 @@ func NewContBarber(e *echo.Echo, a ibarbers.Usecase) {
 // @Param Version header string true "OS Device"
 // @Param id path string true "ID"
 // @Success 200 {object} tool.ResponseModel
-// @Router /barber/barber/{id} [get]
+// @Router /barber-service/barber/barber/{id} [get]
 func (u *ContBarber) GetDataBy(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
@@ -88,7 +88,7 @@ func (u *ContBarber) GetDataBy(e echo.Context) error {
 // @Param initsearch query string false "InitSearch"
 // @Param sortfield query string false "SortField"
 // @Success 200 {object} models.ResponseModelList
-// @Router /barber/barber [get]
+// @Router /barber-service/barber/barber [get]
 func (u *ContBarber) GetList(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
@@ -136,7 +136,7 @@ func (u *ContBarber) GetList(e echo.Context) error {
 // @Param Version header string true "OS Device"
 // @Param req body models.BarbersPost true "req param #changes are possible to adjust the form of the registration form from frontend"
 // @Success 200 {object} tool.ResponseModel
-// @Router /barber/barber [post]
+// @Router /barber-service/barber/barber [post]
 func (u *ContBarber) Create(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
@@ -182,7 +182,7 @@ func (u *ContBarber) Create(e echo.Context) error {
 // @Param id path string true "ID"
 // @Param req body models.BarbersPost true "req param #changes are possible to adjust the form of the registration form from frontend"
 // @Success 200 {object} tool.ResponseModel
-// @Router /barber/barber/{id} [put]
+// @Router /barber-service/barber/barber/{id} [put]
 func (u *ContBarber) Update(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
@@ -234,7 +234,7 @@ func (u *ContBarber) Update(e echo.Context) error {
 // @Param Version header string true "OS Device"
 // @Param id path string true "ID"
 // @Success 200 {object} tool.ResponseModel
-// @Router /barber/barber/{id} [delete]
+// @Router /barber-service/barber/barber/{id} [delete]
 func (u *ContBarber) Delete(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
