# controllers/user/cont_ss_user.go
@@ -50,7 +50,7 @@ func NewContUser(e *echo.Echo, a iusers.Usecase) {
 // @Param Version header string true "OS Device"
 // @Param id path string true "ID"
 // @Success 200 {object} tool.ResponseModel
-// @Router /barber/user/{id} [get]
+// @Router /barber-service/barber/user/{id} [get]
 func (u *ContUser) GetDataBy(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
@@ -93,7 +93,7 @@ func (u *ContUser) GetDataBy(e echo.Context) error {
 // @Param initsearch query string false "InitSearch"
 // @Param sortfield query string false "SortField"
 // @Success 200 {object} models.ResponseModelList
-// @Router /barber/user [get]
+// @Router /barber-service/barber/user [get]
 func (u *ContUser) GetList(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
@@ -146,7 +146,7 @@ func (u *ContUser) GetList(e echo.Context) error {
 // @Param Version header string true "OS Device"
 // @Param req body models.AddUser true "req param #changes are possible to adjust the form of the registration form from frontend"
 // @Success 200 {object} tool.ResponseModel
-// @Router /barber/user [post]
+// @Router /barber-service/barber/user [post]
 func (u *ContUser) Create(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
@@ -203,7 +203,7 @@ func (u *ContUser) Create(e echo.Context) error {
 // @Param id path string true "ID"
 // @Param req body models.UpdateUser true "req param #changes are possible to adjust the form of the registration form from frontend"
 // @Success 200 {object} tool.ResponseModel
-// @Router /barber/user/{id} [put]
+// @Router /barber-service/barber/user/{id} [put]
 func (u *ContUser) Update(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
@@ -255,7 +255,7 @@ func (u *ContUser) Update(e echo.Context) error {
 // @Param Version header string true "OS Device"
 // @Param req body models.ChangePassword true "req param #changes are possible to adjust the form of the registration form from frontend"
 // @Success 200 {object} tool.ResponseModel
-// @Router /barber/user/change_password [post]
+// @Router /barber-service/barber/user/change_password [post]
 func (u *ContUser) ChangePassword(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
@@ -305,7 +305,7 @@ func (u *ContUser) ChangePassword(e echo.Context) error {
 // @Param Version header string true "OS Device"
 // @Param id path string true "ID"
 // @Success 200 {object} tool.ResponseModel
-// @Router /barber/user/{id} [delete]
+// @Router /barber-service/barber/user/{id} [delete]
 func (u *ContUser) Delete(e echo.Context) error {
 	ctx := e.Request().Context()
 	if ctx == nil {
